* search: support es cloud * kibana: support es cloud